{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 349,
  "lineage": "349cda9a-77f7-9e8a-99c1-b4e8af848a1a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.377-07:00",
            "deny": [],
            "description": "Allows ingress TCP traffic on port 3000 to instances with the app-server tag.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-app-port-3000",
            "log_config": [],
            "name": "allow-app-port-3000",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-app-port-3000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.374-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-db-access",
            "log_config": [],
            "name": "allow-db-access",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-db-access",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "web-server"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db_egress_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:29.175-07:00",
            "deny": [],
            "description": "Allows egress HTTP/HTTPS traffic from db-server instances to the internet.",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-db-egress-http-https",
            "log_config": [],
            "name": "allow-db-egress-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-db-egress-http-https",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.357-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.385-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mongo_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.273-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-mongo-db",
            "log_config": [],
            "name": "allow-mongo-db",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-mongo-db",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "web-server"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_external_insecure",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:48.274-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-ssh-external-insecure",
            "log_config": [],
            "name": "allow-ssh-external-insecure",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/default",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-ssh-external-insecure",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.377-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:29.150-07:00",
            "deny": [],
            "description": "Allow SSH from any IP to instances with the web-server tag on the two-tier-vpc network.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/allow-ssh-to-web-server",
            "log_config": [],
            "name": "allow-ssh-to-web-server",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/allow-ssh-to-web-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:48.271-07:00",
            "deny": [],
            "description": "Allow ICMP from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/default-allow-icmp",
            "log_config": [],
            "name": "default-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/default",
            "priority": 65534,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/default-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:48.290-07:00",
            "deny": [],
            "description": "Allow internal traffic on the default network",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/default-allow-internal",
            "log_config": [],
            "name": "default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/default",
            "priority": 65534,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/default-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:48.271-07:00",
            "deny": [],
            "description": "Allow RDP from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/default-allow-rdp",
            "log_config": [],
            "name": "default-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/default",
            "priority": 65534,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/default-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:48.288-07:00",
            "deny": [],
            "description": "Allow SSH from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/default",
            "priority": 65534,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "two_tier_vpc_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:29.060-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/two-tier-vpc-allow-http",
            "log_config": [],
            "name": "two-tier-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/two-tier-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "two_tier_vpc_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-15T05:58:17.398-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-sparta/global/firewalls/two-tier-vpc-allow-https",
            "log_config": [],
            "name": "two-tier-vpc-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "priority": 1000,
            "project": "gcp-sparta",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/firewalls/two-tier-vpc-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/zones/us-central1-a/disks/app-instance"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-sparta/zones/us-central1-a/instances/app-instance",
            "instance_id": "6728901819484597869",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "obbnSPGFF0A=",
            "name": "app-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.47.196",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "gcp-sparta"
              }
            ],
            "project": "gcp-sparta",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/zones/us-central1-a/instances/app-instance",
            "service_account": [
              {
                "email": "155517448706-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-server",
              "web-server"
            ],
            "tags_fingerprint": "Hhnd_s0tbQc=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/zones/us-central1-a/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-sparta/zones/us-central1-a/instances/db-instance",
            "instance_id": "6427189931832766060",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "obbnSPGFF0A=",
            "name": "db-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/regions/us-central1/subnetworks/private-subnet",
                "subnetwork_project": "gcp-sparta"
              }
            ],
            "project": "gcp-sparta",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/zones/us-central1-a/instances/db-instance",
            "service_account": [
              {
                "email": "155517448706-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db-server"
            ],
            "tags_fingerprint": "6nVWpqigcVg=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "description": "Default network for the project",
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-sparta/global/networks/default",
            "mtu": 0,
            "name": "default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "gcp-sparta",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/default"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "two_tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-sparta/global/networks/two-tier-vpc",
            "mtu": 0,
            "name": "two-tier-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "gcp-sparta",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-15T05:58:29.269-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcp-sparta/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "project": "gcp-sparta",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/regions/us-central1/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-sparta/us-central1/nat-router/nat-config",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-sparta",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-15T05:58:17.919-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/gcp-sparta/regions/us-central1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-sparta",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/regions/us-central1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-15T05:58:18.309-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/gcp-sparta/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/global/networks/two-tier-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-sparta",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-sparta/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.two_tier_vpc"
          ]
        }
      ]
    }
  ]
}